Description of numerical methods

--- a/main.tex
+++ b/main.tex
@@ -73,8 +73,8 @@
 \titlespacing*{\chapter}{0pt}{0pt}{40pt}
 
 % Dots in table of contents
-\usepackage{tocloft}
-\renewcommand{\cftchapleader}{\cftdotfill{\cftdotsep}} % for chapters
+%\usepackage{tocloft}
+%\renewcommand{\cftchapleader}{\cftdotfill{\cftdotsep}} % for chapters
 
 % Graphics path for figures
 \graphicspath{{figures/}}
@@ -84,6 +84,8 @@
 \DeclarePairedDelimiter{\norm}{\|}{\|}
 \DeclareMathOperator{\erf}{erf}
 \DeclareMathOperator{\trace}{tr}
+%\DeclareMathOperator{\tg}{tg}
+%\DeclareMathOperator{\ctg}{ctg}
 
 % Page breaking in multi-line formulae
 \allowdisplaybreaks[1]
@@ -289,7 +291,7 @@ $$
 Работа Забужского и Краскала дала толчок к аналитическим исследованиям уравнения Кортевега-де Фриза (КдФ), которые привели к возникновению в 1967 году метода обратной задачи рассеяния (МОЗР), позволяющего получить точное аналитическое решение уравнения по заданному начальному условию~\cite{GardnerIST}. Позже этот метод был обобщён и на некоторые другие нелинейные волновые уравнения, однако лишь очень небольшое количество нелинейных систем являются полностью интегрируемыми (решаемыми с помощью МОЗР)~\cite{Zakharov}.
 
 Для численного эксперимента в работе 1965 года Забужский и Краскал использовали простейшую явную конечно-разностную схему второго порядка по временной и пространственной переменной. Впоследствии был предложен ряд других более сложных неявных конечно-разностных схем и псевдоспектральных методов, обзору которых посвящена работа~\cite{Taha}. Численное моделирование особенно важно для неинтегрируемых систем, к числу которых относятся, например, все уравнения типа Буссинеска, кроме \eqref{1_boussinesq}. Для таких уравнений были предложены конечно-разностные схемы, в которых на каждом шаге для обработки нелинейного слагаемого проводится несколько внутренних итераций~\cite{Christov, Kolkovska}.
-Помимо метода конечных разностей к нелинейным уравнениям применяют и другие численные методы, например, конечных объёмов и конечных элементов~\cite{Dutykh_Boussinesq, Karczewska}. Отметим, что для численного решения уравнений, обладающих гладкими решениями, в областях простой геометрии одним из лучших методов является псевдоспектральный метод, широко применяющийся в нелинейных задачах~\cite{Gottlieb_Orszag}.
+Помимо метода конечных разностей к нелинейным уравнениям применяют и другие численные методы, например, конечных объёмов и конечных элементов~\cite{Dutykh_Boussinesq, Karczewska}. Отметим, что для численного решения уравнений, обладающих гладкими решениями, в областях простой геометрии одним из лучших методов является псевдоспектральный метод, широко применяющийся в нелинейных задачах~\cite{Gottlieb_Orszag, Canuto2007}.
 
 %Семейство спектральных методов основано на поиске решения уравнений в некотором конечномерном пространстве функций. В качестве базиса могут быть выбран, например, базис Фурье (набор синусов и косинусов), набор многочленов Чебышёва первого рода или многочленов Лежандра. В настоящей работе исследуются динамические задачи, в которых неизвестная функция зависит как от временной, так и от пространственных переменных: $u = u(x, t)$. Спектральный базис вводится, как правило, только для пространственной дискретизации, тогда как для численного решения ОДУ по временной переменной используются стандартные методы, например, Рунге-Кутты 4-го порядка~\cite{Gottlieb_Orszag}. Существует три типа спектральных методов: метод Галёркина, тау метод и метод коллокаций (псевдоспектральный метод). Наиболее эффективным методом для решения нелинейных уравнений, а также уравнений с непостоянными коэффициентами является именно псевдоспектральный метод.
 
@@ -461,7 +463,6 @@ U = U(x,r,t), \quad V = V(x,r,t), \quad W = 0.
 %while the third equation is identically satisfied. Here, $P_{\alpha \beta}$ denote components of the first Piola-Kirchhoff stress tensor, {\color{red} and we do not use different fonts for the coordinates in the current and reference configurations in these notations.}
 
 Зададим на поверхности стержня осесимметричное напряжение $\vect{P_b} = (P(x,t), T(x,t), 0)$. Тогда граничные условия имеют вид:
-%Уравнения движения дополнены граничными условиями на поверхности стержня:
 %The equations of motion are complemented by the surface boundary conditions
 %\begin{equation} \label{2_bc}
 %\tens{P}\cdot \vect{n} = \vect{P_b} = (P(x,t), T(x,t), 0),
@@ -1071,7 +1072,7 @@ B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
 	\centering
 	\includegraphics[width=0.6\linewidth]{DeformedRod1}
 	\includegraphics[width=0.6\linewidth]{DeformedRod2}
-	\caption{Стержень в разрезе при прохождении солитона деформации~\eqref{soliton},~\eqref{Bi} с амплитудным параметром $A=-0.03$. Продольные перемещения увеличены в 30 раз, поперечные в 60 раз. Стержень сделан из полистирола.}
+	\caption{Стержень из полистирола в разрезе при прохождении солитона деформации~\eqref{soliton},~\eqref{Bi} с амплитудным параметром $A=-0.03$. Продольные перемещения увеличены в 30 раз, поперечные в 60 раз.}
 	\label{fig:rod_deformed}
 \end{figure}
 
@@ -1119,9 +1120,16 @@ u_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\
 Отметим, что пседвоспектральный метод чаще всего используется только для пространственной дискретизации, в то время как дискретизация по времени осуществляется с помощью стандартных методов, например, Рунге-Кутты 4-го порядка.
 %Опишем метод подробнее.
 
-Пседвоспектральный метод основан на поиске решения в некотором подпространстве, имеющем конечный базис, в качестве которого чаще всего выбирается базис Фурье (набор синусов и косинусов) или семейство ортогональных многочленов. Выбор базиса определяется граничными условиями Дирихле: базисные функции должны удовлетворять им. 
+Семейство спектральных методов, одним из которых является псевдоспектральный метод или метод коллокации, основано на поиске решения задачи в некотором подпространстве, имеющем конечный базис, в качестве которого чаще всего выбирается базис Фурье (набор синусов и косинусов) или семейство ортогональных многочленов. 
+%Выбор базиса определяется граничными условиями Дирихле: базисные функции должны удовлетворять им. 
+%Псевдоспектральный метод, называемый также методом коллокации, является одним из семейства спектральных методов. 
+Отличительной особенностью псевдоспектрального метода является выполнение уравнений не на всей области, а лишь в конечном наборе точек, называемых точками коллокации. Получаемые в результате значения решения в точках коллокации затем интерполируются на всю область задачи. 
+%В качестве точек коллокации выбираются точки соответствущей квадратуры, что определяется нулями определённых полиномов.
+%Конкретный вид полинома, у которого ищутся нули, определяется типом квадратуры (Гаусса, Радау, Гаусса-Лобатто).
+%При этом нули полиномов Чебышева и их производных имеют простой аналитический вид. А вот для полиномов Лежандра все сложнее и нули надо искать численно.
+Выбор точек коллокации определяется используемым базисом: для базиса Фурье точки равномерно распределены по области, а для ортогональных многочленов выбираются точки соответствующей квадратуры, задаваемые нулями определённых многочленов. Конкретный вид многочлена, у которого ищутся нули, определяется типом квадратуры: Гаусса, Гаусса-Радо или Гаусса-Лобатто. Более подробному описанию этого метода применительно к решаемым уравнениям посвящён следующий параграф.
 
-Псевдоспектральный метод, называемый также методом коллокации, является одним из семейства спектральных методов. Его отличительной особенностью является выполнение уравнений не на всей области, а лишь в конечном наборе точек, называемых точками коллокации. Выбор этих точек определяется используемым базисом: для базиса Фурье точки равномерно распределены по области, а для многочленов Чебышёва эти точки должны быть распределены согласно чебышёвской плотности с разрежением в центре области и сгущением к краям. Неправильный выбор точек коллокации грозит возникновением больших ошибок в решении.
+%Выбор этих точек определяется используемым базисом: для базиса Фурье точки равномерно распределены по области, а для многочленов Чебышёва эти точки должны быть распределены согласно чебышёвской плотности с разрежением в центре области и сгущением к краям. Неправильный выбор точек коллокации грозит возникновением больших ошибок в решении.
 
 \section{Численная схема}
 \subsection{Одномерное уравнение типа Буссинеска}
@@ -1149,31 +1157,35 @@ u_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\
 \end{equation}
 Будем искать приближённое решение $u_N$ в виде комбинации из $N$ гармоник:
 \begin{equation}\label{3_spect_approx}
-u_N(x, t) = \sum_{k=-N/2+1}^{N/2} \widehat u(k, t) e^{ikx}, \quad x\in(0, 2\pi).
+u_N(x, t) = \sum_{k=-N/2}^{N/2-1} \widehat u(k, t) e^{ikx}, \quad x\in(0, 2\pi).
 \end{equation}
 Ключевая идея псевдоспектрального метода заключается в поиске таких коэффициентов $\widehat u(k, t)$, что точное решение $u$ совпадает с приближённым решением $u_N$ в точках коллокации $x_j$:
 \begin{equation}\label{3_pseudo_sp_approx}
-u_N(x_j, t) = u(x_j, t), \quad x_j = \frac{2\pi j}{N-1}, \quad j=0,\dots, N-1.
+u_N(x_j, t) = u(x_j, t), \quad x_j = \frac{2\pi j}{N}, \quad j=0,\dots, N-1.
 \end{equation}
 Из условия \eqref{3_pseudo_sp_approx} естественным образом вытекает применение дискретного преобразования Фурье (ДПФ) для нахождения $\widehat u(k, t)$, а для обратной операции -- обратного ДПФ:
 %Для нахождения коэффициентов $\widehat u(k, t)$ при гармониках по значениям в узлах сетки используется дискретное преобразование Фурье (ДПФ), а для обратной операции -- обратное ДПФ:
 \begin{align}\label{3_dft}
-\widehat u(k, t) &= \mathcal{F} u = \sum_{j=0}^{N-1} u(x_j, t) e^{-ikx_j}, \quad k=-\frac N 2 + 1, \dots, \frac N 2,\\
+\widehat u(k, t) &= \mathcal{F} u = \frac1N\sum_{j=0}^{N-1} u(x_j, t) e^{-ikx_j}, \quad k=-\frac N 2, \dots, \frac N 2 - 1,\\
 \label{3_idft}
-u(x_j, t) &= \mathcal{F}^{-1} \widehat u = \frac1N \sum_{k=-N/2+1}^{N/2} \widehat u(k, t) e^{ikx_j}, \quad x_j = \frac{2\pi j}{N-1}, \quad j=0, \dots, N-1.
+u(x_j, t) &= \mathcal{F}^{-1} \widehat u = \sum_{k=-N/2}^{N/2-1} \widehat u(k, t) e^{ikx_j}, \quad j=0, \dots, N-1.
 \end{align}
 Отметим, что использование ДПФ выгодно с вычислительной точки зрения, поскольку для его реализации есть алгоритм быстрого преобразования Фурье.
 
-Применим ДПФ к уравнению \eqref{3_bq_reg_scaled} и начальным условиям \eqref{3_bq_iv}. Приравнивая коэффициент при каждой гармонике к нулю, получаем систему дифференциальных уравнений с начальными условиями в виде:
+Спектральное представление \eqref{3_spect_approx} позволяет быстро находить производную по пространственной переменной:
+\begin{equation}\label{3_spect_deriv}
+u_N'(x, t) = \sum_{k=-N/2}^{N/2-1} ik \widehat u(k, t) e^{ikx}.
+\end{equation}
+Применим спектральное представление \eqref{3_spect_approx} к уравнению \eqref{3_bq_reg_scaled} и начальным условиям \eqref{3_bq_iv}. Приравнивая коэффициент при каждой гармонике к нулю, получаем систему обыкновенных дифференциальных уравнений с начальными условиями в виде:
 \begin{gather}\label{3_bq_reg_dft}
 \begin{split}
-\lb 1 - \tilde{\alpha} S^2 k^2\rb\widehat u'' =&  -S^2 k^2 \lb c^2 \widehat u + \tilde \beta_1 \widehat{u^2} + \tilde\beta_2\widehat{uP} + \tilde{\beta}_3\widehat{P^2} \rb + S^2 g_1 \widehat{P_{xx}} - S g_2 \widehat{T_x} \\
+\lb 1 - \tilde{\alpha} S^2 k^2\rb\ddot{\widehat u} =&  -S^2 k^2 \lb c^2 \widehat u + \tilde \beta_1 \widehat{u^2} + \tilde\beta_2\widehat{uP} + \tilde{\beta}_3\widehat{P^2} \rb + S^2 g_1 \widehat{P_{xx}} - S g_2 \widehat{T_x} \\
 &- \lb S^4\gamma_1 \widehat{P_{xxxx}} + S^2\gamma_2 \widehat{P_{xxtt}} + S\gamma_3 \widehat{T_{xtt}} + S^3\gamma_4 \widehat{T_{xxx}}\rb,
 \end{split}\\
 \label{3_bq_dft_iv}
-\widehat{u}_0(k) = \widehat{\phi}(k), \qquad \widehat{u}_0'(k) = \widehat{\psi}(k), \qquad k=-\frac N 2 + 1, \dots, \frac N 2,
+\widehat{u}(k, 0) = \widehat{\phi}(k), \qquad \dot{\widehat{u}}(k, 0) = \widehat{\psi}(k), \qquad k=-\frac N 2, \dots, \frac N 2 - 1,
 \end{gather}
-где штрих обозначает производную по времени.
+где точка над функцией обозначает производную по времени.
 Для нахождения Фурье образа нелинейного слагаемого $u^2$, а также $uP$, к функции $\widehat u$ применяется обратное преобразование, затем полученная функция $u(x_j, t)$ возводится в квадрат в узлах сетки или домножается на $P(x_j, t)$ и переводится обратно в пространство Фурье:
 $$
 \widehat{u^2} = \mathcal{F}\lbrack\lb\mathcal{F}^{-1}\widehat u\rb^2\rbrack, \qquad \widehat{uP} = \mathcal{F}\lbrack P\cdot \mathcal{F}^{-1}\widehat u\rbrack.
@@ -1181,21 +1193,41 @@ $$
 Такой метод при использовании быстрого преобразования Фурье позволяет эффективно вычислять $\widehat{u^2}$ и $\widehat{uP}$.
 Решать систему \eqref{3_bq_reg_dft}, \eqref{3_bq_dft_iv} будем с помощью метода Рунге-Кутты 4-го порядка. Применяя обратное ДПФ к решению этой системы, получаем приближение исходной задачи Коши \eqref{3_bq_reg}, \eqref{3_bq_iv}.
 
-Аналогичным образом можно дискретизировать нерегуляризованные уравнения (\ref{eq_dim}) с тремя дисперсионными слагаемыми, однако возникающая система обыкновенных дифференциальных уравнений 4-го порядка оказывается жёсткой и не поддаётся решению явными методами. В настоящей работе много времени было потрачено на реализацию псевдоспектрального метода для полных уравнений, описанию которого посвящён следующий параграф, поэтому задачу о численном моделировании уравнений \eqref{eq_dim} было решено оставить на будущее.
+С помощью псевдоспектрального метода уравнения в частных производных часто сводятся к системе ОДУ относительно значений функции в точках коллокации $u_N(x_j, t)$, а не $\widehat u(k, t)$. В таком случае нелинейные слагаемые вычисляются простым поточечным произведением значений функций в точках коллокации, а вычисление пространственных производных осуществляется с помощью ДПФ и формулы ~\eqref{3_spect_deriv}. Отметим, что вычисление производной может быть выражено через умножение вектора значений $u_N(x_j, t)$ на матрицу производной $D_N$:
+\begin{equation}\label{3_phys_deriv}
+\vect{u}_N'(t) = D_N \vect{u}_N(t), \qquad \vect{u}_N(t) = \{u_N(x_j, t)\}_{j=0}^{N-1}.
+\end{equation}
+Однако для регуляризованного уравнения Буссинеска, где присутствует смешанная производная $u_{xxtt}$, применить такой метод вычисления производной затруднительно. Матрицы $D_N$ для различных базисов приведены в~\cite{Canuto2007}.
+%Для базиса Фурье она записывается следующим образом:
+%\begin{equation}\label{3_diff_mat_fourier}
+%(D_N)_{jl} = \begin{cases}
+%\frac12(-1)^{j+l} \ctg\lbrack\frac{(j-l)\pi}{N}\rbrack, &j\neq l,\\
+%0, &j=l,
+%\end{cases}
+%\end{equation}
+%а для базиса Лежанжра в точках Гаусса-Лобатто и Гаусса-Радо так:
+%\begin{equation}\label{3_diff_mat_legendre}
+%(D_N)_{jl} = \begin{cases}
+%\dfrac{L_N(x_j)}{L_N(x_l)} \dfrac{1}{x_j-x_l}, &j\neq l,\\
+%-\dfrac{(N+1)N}{4}, &j=l=0,\\
+%\dfrac{(N+1)N}{4}, &j=l=N,\\
+%0, &\mbox{в остальных случаях},
+%\end{cases}
+%\end{equation}
+
+Аналогичным образом можно дискретизировать нерегуляризованные уравнения (\ref{eq_dim}) с тремя дисперсионными слагаемыми, однако возникающая система обыкновенных дифференциальных уравнений 4-го порядка оказывается жёсткой и не поддаётся решению явными методами. В настоящей работе много времени было уделено реализации псевдоспектрального метода для полных уравнений, описанию которого посвящён следующий пункт, поэтому задачу о численном моделировании уравнений \eqref{eq_dim} было решено оставить на будущее.
 
 \subsection{Полные трёхмерные уравнения}
-Разрабатывая численный метод для решения полных уравнений, мы задались целью сделать его пригодным для как можно более широкого круга численных экспериментов. Во-первых, метод должен подходить для моделирования эволюции некоторого начального импульса (решение задачи Коши на периодическом интервале). Во-вторых, должна быть возможность моделировать волны, возникающие в результате внешнего воздействия, как на боковую поверхность, так и на торец стержня (решение начально-краевой задачи на некотором конечном, но достаточно длинном интервале). В третьих, мы хотели бы учитывать в будущем не только осесимметричную деформацию, т.е. случай, когда перемещение зависит от угловой координаты $\varphi$.
+%Разрабатывая численный метод для решения полных уравнений, мы задались целью сделать его пригодным для как можно более широкого круга численных экспериментов. Во-первых, метод должен подходить для моделирования эволюции некоторого начального импульса в течение длительного времени, для чего необходимо иметь возможность задачу Коши на периодическом интервале. Во-вторых, метод должен позволять моделировать волны, возникающие в результате внешнего воздействия, как на боковую поверхность, так и на торец стержня (решение начально-краевой задачи на некотором конечном, но достаточно длинном интервале). %В третьих, мы хотели бы учитывать в будущем не только осесимметричную деформацию, т.е. случай, когда перемещение зависит от угловой координаты $\varphi$.
 
-Для того, чтобы выполнить поставленные цели, мы реализовали метод с дискретизацией по всем трём координатам. Для возможности моделирования уравнений в длинных стержнях с высокой точностью без рассмотрения гармоник или полиномов большой степени, мы реализовали многодоменный метод, позволяющий разбить область по осевой координате на несколько подобластей (доменов). Например, если нужно иметь 1000 точек коллокации по оси $x$, то, чтобы избежать учёт полиномов 1000-й степени, можно разбить область на 50 подобластей и на каждой подобласти использовать полиномы до 20-й степени. {\color{red} Поправить вводную часть после описания экспериментов}
+%Для того, чтобы выполнить поставленные цели, мы реализовали метод с дискретизацией по всем трём координатам. Для возможности моделирования уравнений в длинных стержнях с высокой точностью без рассмотрения гармоник или полиномов большой степени, мы реализовали многодоменный метод, позволяющий разбить область по осевой координате на несколько подобластей (доменов). Например, если нужно иметь 1000 точек коллокации по оси $x$, то, чтобы избежать учёт полиномов 1000-й степени, можно разбить область на 50 подобластей и на каждой подобласти использовать полиномы до 20-й степени. {\color{red} Поправить вводную часть после описания экспериментов}
 
-Опишем метод подробнее. Пусть имеется однородный стержень круглого сечения длиной $L$ и радиусом $R$.
-Выпишем полные уравнения движения, граничные и начальные условия в векторном виде:
+Сформулируем задачу Коши для полных уравнений, описывающих динамику однородного стержня круглого сечения длиной $L$ и радиусом $R$:
 \begin{align}
 \label{3_eqns_full}
-&\ddot{\vect{U}}(x, r, \varphi, t) = \frac1\rho \nabla\cdot\tens{P},\quad 0<x<L, \quad 0<r<R, \quad 0<\varphi<2\pi,\\
+&\ddot{\vect{U}}(x, r, \varphi, t) = \frac1\rho \nabla\cdot\tens{P},\quad 0<x<L, \quad 0<r<R,\quad 0<\varphi<2\pi,\\
 \label{3_bc_full}
 &\tens{P} \cdot \vect{n} = \vect{P_b}, \quad r = R,\\
-%&\vect{U}\big|_{x=0} = \vect{U}\big|_{x=L},\\
 \label{3_iv_full}
 &\vect{U}(x,r,\varphi,0) = \vect{U}_0(x,r,\varphi), \quad \vect{\dot U}(x,r,\varphi,0) = \vect{\dot U}_0(x,r,\varphi),\\
 \label{3_stress}
@@ -1203,24 +1235,61 @@ $$
 \label{3_strain}
 &\tens{E} = \frac12 \lb \nabla\vect{U}^T + \nabla\vect{U} + \nabla\vect{U}^T \cdot \nabla\vect{U} \rb,
 \end{align}
-где $\tens{E}^*$ -- союзная матрица, а $\tens{\mathcal{I}}$ -- единичный тензор.
-Разобьём область задачи на несколько доменов вдоль оси $x$ и на каждом домене будем искать решение в некотором конечномерном пространстве, задаваемым системой базисных функций $\Phi_{n_1}(x), \Psi_{n_2}(r), \Theta_{n_3}(\varphi)$. Представим приближённое решение на $i$-м домене $\vect{U}_{N}^{(i)}$ в спектральном виде и потребуем, чтобы приближённое решение совпадало с точным в точках коллокации:
+где $\tens{E}^*$ -- союзная матрица, $\tens{\mathcal{I}}$ -- единичный тензор, а по $x$ ставятся периодические граничные условия.
+Будем искать решение в некотором конечномерном пространстве, задаваемым системой базисных функций $\Phi_{n_1}(x)$, $\Psi_{n_2}(r)$, $\Theta_{n_3}(\varphi)$. 
+Представим приближённое решение %на $i$-м домене
+$\vect{U}_{N}$ в спектральном виде и потребуем, чтобы приближённое решение совпадало с точным в точках коллокации:
 \begin{align}
 \label{3_spect_approx_full}
-&\vect{U}_{N}^{(i)}(x,r,\varphi,t) = \sum_{n_1,n_2,n_3} \vect{\widehat{U}}^{(i)}(n_1,n_2,n_3,t) \Phi_{n_1}(x) \Psi_{n_2}(r) \Theta_{n_3}(\varphi),\\
+&\vect{U}_{N}(x,r,\varphi,t) = \sum_{n_1,n_2,n_3} \vect{\widehat{U}}(n_1,n_2,n_3,t) \Phi_{n_1}(x) \Psi_{n_2}(r) \Theta_{n_3}(\varphi),\\
 \label{3_pseudo_sp_approx_full}
 \begin{split}
-&\vect{U}_{N}^{(i)}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t) = \vect{U}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t), \quad j_1 = 0,\dots, N_1-1, \quad j_2 = 0,\dots, N_2-1,\\
+&\vect{U}_{N}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t) = \vect{U}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t), \quad j_1 = 0,\dots, N_1-1, \quad j_2 = 0,\dots, N_2-1,\\
 &\hspace{72.5mm} j_3 = 0,\dots, N_3-1.
 \end{split}
 \end{align}
-Подстановка \eqref{3_spect_approx_full} в уравнения \eqref{3_eqns_full} приводит к системе ОДУ второго порядка относительно $\vect{\widehat{U}}^{(i)}$ на каждом из доменов:
-\begin{equation}\label{3_ode_domain}
-\vect{\ddot{\widehat U}}_{N,k}^{(i)} = F_{k}^{(i)}(\vect{\widehat U}_{N,k_0}, \dots, \vect{\widehat U}_{N,k_N}), \quad k = k_0, \dots, k_N.
+В уравнении \eqref{3_eqns_full} отсутствуют смешанные производные по временной и пространственным переменным, поэтому подстановка \eqref{3_spect_approx_full} в \eqref{3_eqns_full} приводит к системе ОДУ второго порядка относительно~$\vect{U}$:
+\begin{equation}\label{3_ode_inner}
+\vect{\ddot{U}}_{N,k} = F_{k}(\vect{U}_{N,k_0}, \dots, \vect{U}_{N,k_N}), \quad k = k_0, \dots, k_N.
 \end{equation}
-Здесь $k$ -- мультииндекс: $k = (j_1,j_2,j_3)$, $k_0=(0,0,0)$, $k_N = (N_1-1,N_2-1,N_3-1)$, а также использовано обозначение: $\vect{\widehat U}_{N,j_1,j_2,j_3}^{(i)} = \vect{\widehat U}_{N}^{(i)}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t)$. Следующая задача -- сшивка доменов. 
+Здесь $k$ -- мультииндекс: $k = (j_1,j_2,j_3)$, $k_0=(0,0,0)$, $k_N = (N_1-1,N_2-1,N_3-1)$, а также использовано обозначение: $\vect{\widehat U}_{N,j_1,j_2,j_3} = \vect{\widehat U}_{N}(x_{j_1}, r_{j_2}, \varphi_{j_3}, t)$. В граничных узлах необходимо сделать добавку, чтобы выполнялись граничные условия \eqref{3_bc_full}:
+\begin{equation}\label{3_ode_boundary}
+\vect{\ddot{U}}_{N,k} = F_{k}(\vect{U}_{N,k_0}, \dots, \vect{U}_{N,k_N}) + \vect{P}_{b,k} - \vect{P}(\vect{U}_{N,k_0}, \dots, \vect{U}_{N,k_N}), \quad r_k = R.
+\end{equation}
 
-Для обработки нелинейных слагаемых необходимо иметь быстрое преобразование для перехода из физического пространства (пространства функций, заданных своими значениями на сетке) в спектральное пространство...
+Функция $F_k$ содержит в себе множество пространственных производных, которые можно вычислить по формуле~\eqref{3_phys_deriv} с помощью умножения на матрицу дифференцирования $D_N$. Оценим сложность этого метода на примере вычисления спектральной производной:
+\begin{align} \label{3_spect_deriv_example}
+&\lb\pdiff{U_N}{x}\rb_{j_1, j_2, j_3} = \lb D_{N_1}\rb_{j_1 l} U_{N,l,j_2,j_3},
+\begin{split} 
+j_1 = 0,\dots, N_1-1, \quad &j_2 = 0,\dots, N_2-1,\\
+&j_3 = 0,\dots, N_3-1,
+\end{split}
+\end{align}
+где в правой части выполняется суммирование по повторяющемуся индексу $l$. Такое вычисление производной требует $O(N_1^2N_2N_3)$ операций. Если в задаче используется базис Фурье или Чебышёва, то дифференцирование можно провести в пространстве коэффициентов $\widehat{U}_N$, для перехода к которым используется быстрое преобразование Фурье, что потребует $O\lb N_1\log(N_1) N_2 N_3\rb$ операций. Если используется другой базис, например, Лежандра, то такой возможности ускорить вычисление производной нет.
+
+Для того, чтобы справиться с этой проблемой и иметь возможность относительно быстро получать решения уравнений на сетке с большим количеством точек, мы применили \emph{многодоменный} псевдоспектральный метод, он же метод \emph{спектрального элемента}.
+В рамках этого метода область задачи $\Omega$ разбивается по каждой из осей на $M$ подобластей (доменов) $\Omega_m$:
+\begin{align*}
+&\Omega = \{(x,r,\varphi)\in\mathbb{R}^3 \, | \, 0<x<L, \; 0<r<R, \; 0<\varphi<2\pi\} = \bigcup\limits_{i=1}^{M} \Omega_m,\\
+&\Omega_m = \{(x,r,\varphi)\in\mathbb{R}^3 \, | \, 0\leqslant L_{m}<x<L_{m+1}\leqslant L, \; 0<R_m<r<R_{m+1}\leqslant R, \\
+&\hspace{40mm} 0\leqslant \varphi_m<\varphi<\varphi_{m+1}\leqslant 2\pi\}.
+\end{align*}
+На каждом домене осуществляется дискретизация согласно псевдоспектральному методу, а затем домены сшиваются так, как это происходит в методе конечных элементов. Теперь для вычисления производной \eqref{3_spect_deriv_example} требуется $O(M N_{1,M}^2 N_{2,M} N_{3,M})$, где $N_{1,M}$, $N_{2,M}$, $N_{3,M}$ --- размерность базиса на одном домене. Выбирая базисы не слишком большой размерности на каждом элементе, мы сможем добиться более высокой скорости вычисления пространственных производных.
+%Отметим, что если на доменах выбирать базисы небольшой размерности, то вычисление производной с помощью умножения на матрицу дифференцирования будет происходить быстрее, чем с помощью быстрого преобразования Фурье, за счёт меньшей константы.
+%Отметим, что для реализации периодических условий по $x$, 
+
+В настоящей работе представляют интерес решения уравнений в осесимметричном случае, поэтому дискретизацию по $\varphi$ в численных экспериментах, описанных в следующем параграфе, мы не будем.
+Для дискретизации по $x$ и по $r$ мы будем использовать базис Лежандра, причём по $x$ в качестве точек коллокации выбираются точки Гаусса-Лобатто, включающие границы, а по $r$ --- точки Гаусса-Радо, чтобы исключить центральную точку стержня ($r=0$). 
+
+%Система ОДУ \eqref{3_ode_inner}, \eqref{3_ode_boundary} была получена путём вычисления пространственных производных в \eqref{3_eqns_full}, \eqref{3_bc_full}, \eqref{3_strain} с помощью умножения на матрицу дифференцирования, как в~\eqref{3_phys_deriv}. Однако умножение массива значений функции на матрицу --- дорогостоящая операция. Например, для вычисления $\pdiff{U}{x}$ необходимо умножить массив значений $\{U_N\}_{k=k_0}^{k_N}$ размером $N_1\times N_2\times N_3$ на матрицу дифференцирования $D_N$ размером $N_1\times N_1$, что требует $O(N_1^2N_2N_3)$ операций.
+
+%Следующая задача -- сшивка доменов -- проводится также, как в методе конечных элементов. 
+%\begin{figure}[h]
+%	\centering
+%	\includegraphics[width=\linewidth]{figures/DomainConnect}
+%	\caption{Сшивка доменов.}
+%	\label{fig:domain_connect}
+%\end{figure}
 
 
 
@@ -1237,9 +1306,9 @@ $$
 На рисунке~\ref{fig:evol_compar1} слева изображена эволюция этого импульса и зарождение солитона при $A_0=0.01$, $W=20$ в стержне из полистирола, характеристики которого представлены в таблице~\ref{tab:ps}. Исходный импульс испускает некоторые осцилляции и отрывается от них, что согласуется с моделью Буссинеска, согласно которой солитон имеет большую скорость, чем линейные волны. На рисунке справа представлено сравнение оторвавшегося импульса (<<экспериментального>> солитона) с <<теоретическим>> солитонном \eqref{soliton_v}. Если скорость теоретического солитона, являющуюся свободным параметром в \eqref{soliton_v}, подобрать так, чтобы она совпадала со скоростью экспериментального солитона, то последний имеет почти ту же длину, что и теоретический, но на 6\% большую амплитуду.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.49\linewidth]{figures/evol}
-	\includegraphics[width=0.49\linewidth]{figures/sol_compar}
-	\caption{Слева: решение задачи Коши с начальными условиями \eqref{3_ic_u}, \eqref{3_ic_v} для полных уравнений. На графике изображены профили продольной деформации в центре стержня ($r=0$) в различные моменты времени:~$-U_x(x - ct, 0, t)$. Масштаб деформации задан показан чёрным прямоугольником. Справа: сравнение профиля <<экспериментального>> солитона, полученного в численном эксперименте, и <<теоретического>> солитона \eqref{soliton_v}. Скорость теоретического солитона $v$ подобрана так, чтобы она совпадала со скоростью экспериментального.}
+	\includegraphics[width=0.49\linewidth]{figures/SolEvol}
+	\includegraphics[width=0.49\linewidth]{figures/SolCompare}
+	\caption{Слева: решение задачи Коши с начальными условиями \eqref{3_ic_u}, \eqref{3_ic_v} для полных уравнений. На графике изображены профили продольной деформации в центре стержня ($r=0$) в различные моменты времени:~$-U_x(x - ct, 0, t)$. Масштаб деформации показан чёрным прямоугольником. Справа: сравнение профиля <<экспериментального>> солитона, полученного в численном эксперименте, и <<теоретического>> солитона \eqref{soliton_v}. Скорость теоретического солитона $v$ подобрана так, чтобы она совпадала со скоростью экспериментального.}
 	\label{fig:evol_compar1}
 \end{figure}
 
@@ -1249,31 +1318,42 @@ $$
 &\qquad u_0 (x) = 2A_0 \exp\lb \frac{(x - L/2)^2}{W^2}\rb,&  &\dot{u}_0 (x) = -c \pdiff{u_0}{x}.&
 \end{flalign}
 Отметим, что уравнение Буссинеска записано относительно функции $u = U_{x}$, а выражение поперечного перемещения $V$ через продольное $U$ уже <<вшито>> в модель.
-На рисунке~\ref{fig:evol_compar2} представлено сравнение эволюции импульса согласно полным уравнениям и согласно модели Буссинеска.
+На рисунке~\ref{fig:evol_compar2} слева представлено сравнение эволюции импульса согласно полным уравнениям и согласно модели Буссинеска.
 Обе модели показывают качественно одинаковый результат, однако модель Буссинеска в этом эксперименте дала солитон примерно на 8\% большей амплитуды и, как следствие, бегущий быстрее солитона в полной модели.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.6\linewidth]{figures/evol_compar2}
-	\caption{Сравнение решений задачи Коши~\eqref{3_ic_u}, \eqref{3_ic_v} для полной модели и задачи Коши~\eqref{3_bq_ic} для регуляризованной модели Буссинеска.}
+	\includegraphics[width=0.49\linewidth]{figures/SolEvolCompare}
+	\includegraphics[width=0.49\linewidth]{figures/VelAmpl}
+	\caption{Слева: сравнение решения задачи Коши~\eqref{3_ic_u}, \eqref{3_ic_v} для полной модели и задачи Коши~\eqref{3_bq_ic} для регуляризованной модели Буссинеска. Справа: сравнение <<экспериментальной>> и <<теоретической>> зависимостей скорости от амплитуды. Горизонтальная линия -- скорость линейных продольных волн $c$.}
 	\label{fig:evol_compar2}
 \end{figure}
 
-Отличительной особенностью нелинейных волн является зависимость скорости от амплитуды волны. На основе численных решений задачи Коши для полных уравнений с начальными импульсами разной амплитуды можно построить <<экспериментальную>> зависимость скорости от амплитуды образовавшегося солитона и сравнить её с <<теоретической>>, задаваемой формулой \eqref{soliton_v}. Эти зависимости изображены на рисунке \ref{fig:vel_ampl}. Теоретическая зависимость для небольших амплитуд почти линейна, в то время как в численном эксперименте рост скорости солитона существенно замедляется с увеличением амплитуды.
-\begin{figure}
+Отличительной особенностью нелинейных волн является зависимость скорости от амплитуды волны. На основе численных решений задачи Коши для полных уравнений с начальными импульсами разной амплитуды можно построить <<экспериментальную>> зависимость скорости от амплитуды образовавшегося солитона и сравнить её с <<теоретической>>, задаваемой формулой \eqref{soliton_v}. Эти зависимости изображены на рисунке \ref{fig:evol_compar2} справа. Теоретическая зависимость для небольших амплитуд почти линейна, в то время как в численном эксперименте рост скорости солитона существенно замедляется с увеличением амплитуды.
+%\begin{figure}
+%	\centering
+%	\includegraphics[width=0.6\linewidth]{figures/vel_ampl}
+%	\caption{Сравнение <<экспериментальной>> и <<теоретической>> зависимостей скорости от амплитуды. Горизонтальная линия -- скорость линейных продольных волн $c$.}
+%	\label{fig:vel_ampl}
+%\end{figure}
+
+
+\subsection{Образование солитона из бегущего по поверхности напряжения}
+Выведенная модель типа Буссинеска отличается от полученных ранее учётом напряжения на поверхности. 
+\begin{figure}[h]
 	\centering
-	\includegraphics[width=0.6\linewidth]{figures/vel_ampl}
-	\caption{Сравнение <<экспериментальной>> и <<теоретической>> зависимостей скорости от амплитуды. Горизонтальная линия -- скорость линейных продольных волн $c$.}
-	\label{fig:vel_ampl}
+	\includegraphics[width=0.49\linewidth]{figures/SolGenForceCompare}
+	\includegraphics[width=0.49\linewidth]{figures/SolGenForce}
+	\caption{}
+	\label{fig:gen_compar1}
 \end{figure}
+
 
 \subsection{Образование солитона из удара по торцу стержня}
 В предыдущем параграфе моделирование волн проводилось в стержне со свободной от напряжений поверхностью, однако представляет интерес изучение волн, вызываемых внешним воздействием, например, ударом по торцу стержня. Эти результаты могут быть полезны для того, чтобы возбудить уединённые волны в эксперименте. 
 
 Модель типа Буссинеска строилась для бесконечного стержня, следовательно, она применима для описания волн вдали от торцов стержня. Моделирование волн вблизи торцов возможно с помощью полных уравнений движения. На рис. ... представлены результаты 
 
-\subsection{Образование солитона из бегущего по поверхности напряжения}
-
-\chapter{Обработка экспериментальных данных}
+%\chapter{Обработка экспериментальных данных}
 
 
 \chapter*{Заключение}
@@ -1302,7 +1382,8 @@ $$
 	\bibitem{Dutykh_Boussinesq} Dutykh D., Katsaounis T., Mitsotakis D., Finite volume schemes for Boussinesq type equations, электронная публикация, arXiv/HAL
 	\bibitem{Karczewska} Karczewska A., Rozmej P., Szczecinski M., Boguniewicz B., A finite element method for extended KdV equations, International Journal of Applied Mathematics and Computer Science, 2016, 26(3), 555--567.
 	\bibitem{Gottlieb_Orszag} Gottlieb D., Orszag S.\,A., Numerical Analysis of Spectral Methods: Theory and Applications, SIAM, Philadelphia, 1977.
-	\bibitem{Trefethen} Trefethen L.\,N., Spectral Methods in MATLAB, SIAM, Philadelphia, 2000.
+	%\bibitem{Trefethen} Trefethen L.\,N., Spectral Methods in MATLAB, SIAM, Philadelphia, 2000.
+	\bibitem{Canuto2007} Canuto C. et al., Spectral Methods. Evolution to Complex Geomenties and Applications to Fluid Dynamics, Springer-Verlag Berlin Heidelberg, 2007.
 	
 	% Nonlinear mechanics %
 	\bibitem{LurieNL} Лурье А. И. Нелинейная теория упругости. М.: <<Наука>>, 1980.
@@ -1351,21 +1432,19 @@ $$
 	
 	%\bibitem{DSS} M. Destrade, G. Saccomandi, I. Sigura, Methodical fitting for mathematical models of rubber-like materials, \textit{Proc. R. Soc. A} 473 (2017) 20160811.
 	%\bibitem{Ogden} R.W. Ogden, \textit{Non-linear elastic deformations}, Dover, Mineola, New York, 1984.
-	\bibitem{bostrm2000} A. Bostr\"{o}m, On wave equations for elastic rods, \textit{ZAMM} 80(4) (2000) 245-251. 
-	%\bibitem{R} {\color{red} P. Rosenau, Dynamics of dense lattices, \textit{Phys. Rev. B} 36 (1987) 5868-5876.}
-	%\bibitem{RRG} {\color{red} M.B. Rubin, P. Rosenau, O. Gottlieb, Continuum model of dispersion caused by an inherent material characteristic length, \textit{J. Appl. Phys.} 77 (1995) 4054-4063.}
-	\bibitem{HughesKelly} D.S. Hughes, J.L. Kelly, Second order elastic deformation of solids, \textit{Phys. Rev.} 92 (1953) 1145-1149.
+	\bibitem{bostrm2000} Bostr\"{o}m A., On wave equations for elastic rods, \textit{ZAMM} 80(4) (2000) 245-251. 
+	\bibitem{HughesKelly} Hughes D.\,S., Kelly J.\,L., Second order elastic deformation of solids, \textit{Phys. Rev.}, 92,  1145-1149, 1953.
 	\bibitem{ADO} Z. Abiza, M. Destrade, and R.W. Ogden, Large acoustoelastic effect, \textit{Wave Motion} 49 (2012) 364-374.
-	\bibitem{PAT} A.V. Pichugin, H. Askes, A. Tyas, Asymptotic equivalence of homogenisation procedures and fine-tuning of continuum theories, \textit{J. Sound and Vibration} 313 92008) 858-874.
-	\bibitem{ADKM} I.V. Andrianov, V.D. Danishevsky, J.D. Kaplunov and B. Markert, Wide frequency higher-order dynamic model for transient waves in a lattice, In: I.V. Andrianov et al. ed., ``Problems of Nonlinear Mechanics and Physics of Materials", Springer, 2019.
-	\bibitem{TP1988} G. V. Dreiden, Yu. I. Ostrovsky, A. M. Samsonov, I. V. Semenova, E. V. Sokurinskaya, Formation and propagation of strain solitons in nonlinearly elastic solid, \textit{Techn. Phys.} 58 (1988) 2040-2017. (in Russian)
-	\bibitem{Dreiden-TP-2008} G.V. Dreiden, A.M. Samsonov, I.V. Semenova, Evolution of bulk strain solitons in long polymeric waveguides, \textit{Techn. Phys.} 53 (2008) 540-546.
-	\bibitem{TPL-Polycarb}  G.V. Dreiden, A.M. Samsonov, I.V. Semenova, Bulk elastic strain solitons in polycarbonate, \textit{Techn. Phys. Lett.} 37 (2011) 500-502.
-	\bibitem{JAP2008} G.V. Dreiden, K.R. Khusnutdinova, A.M. Samsonov, I.V. Semenova, Comparison of the effect of cyanoacrylate- and polyurethane-based adhesives on a longitudinal strain solitary wave in layered polymethylmethacrylate waveguides, \textit{J. Appl. Phys.} 104 (2008) 086106.
-	\bibitem{APL2014} G.V. Dreiden, A.M. Samsonov, I.V. Semenova, and A.G. Shvartz, Strain solitary waves in a thin-walled waveguide, \textit{Appl. Phys. Lett.} 105 (2014) 211906.
-	\bibitem{APL2018} A.V. Belashov, Y.M. Beltukov, N.V. Petrov, A.M. Samsonov, I.V. Semenova, Indirect assessment of bulk strain soliton velocity in opaque solids, \textit{Appl. Phys. Lett.} 112 (2018) 121903.
-	\bibitem{Strain2010} G.V. Dreiden, K.R. Khusnutdinova, A.M. Samsonov, I.V. Semenova, Longitudinal strain solitary wave in a two-layered polymeric bar, \textit{Strain} 46 (2010) 589-598.
-	\bibitem{SPIE2018} A.V. Belashov, Y.M. Beltukov, I.V. Semenova, Pump-probe digital holography for monitoring of long bulk nonlinear strain waves in solid waveguides, \textit{Proc. SPIE} 10678 (2018) 1067810.
+%	\bibitem{PAT} A.V. Pichugin, H. Askes, A. Tyas, Asymptotic equivalence of homogenisation procedures and fine-tuning of continuum theories, \textit{J. Sound and Vibration} 313 92008) 858-874.
+%	\bibitem{ADKM} I.V. Andrianov, V.D. Danishevsky, J.D. Kaplunov and B. Markert, Wide frequency higher-order dynamic model for transient waves in a lattice, In: I.V. Andrianov et al. ed., ``Problems of Nonlinear Mechanics and Physics of Materials", Springer, 2019.
+%	\bibitem{TP1988} G. V. Dreiden, Yu. I. Ostrovsky, A. M. Samsonov, I. V. Semenova, E. V. Sokurinskaya, Formation and propagation of strain solitons in nonlinearly elastic solid, \textit{Techn. Phys.} 58 (1988) 2040-2017. (in Russian)
+%	\bibitem{Dreiden-TP-2008} G.V. Dreiden, A.M. Samsonov, I.V. Semenova, Evolution of bulk strain solitons in long polymeric waveguides, \textit{Techn. Phys.} 53 (2008) 540-546.
+%	\bibitem{TPL-Polycarb}  G.V. Dreiden, A.M. Samsonov, I.V. Semenova, Bulk elastic strain solitons in polycarbonate, \textit{Techn. Phys. Lett.} 37 (2011) 500-502.
+%	\bibitem{JAP2008} G.V. Dreiden, K.R. Khusnutdinova, A.M. Samsonov, I.V. Semenova, Comparison of the effect of cyanoacrylate- and polyurethane-based adhesives on a longitudinal strain solitary wave in layered polymethylmethacrylate waveguides, \textit{J. Appl. Phys.} 104 (2008) 086106.
+%	\bibitem{APL2014} G.V. Dreiden, A.M. Samsonov, I.V. Semenova, and A.G. Shvartz, Strain solitary waves in a thin-walled waveguide, \textit{Appl. Phys. Lett.} 105 (2014) 211906.
+%	\bibitem{APL2018} A.V. Belashov, Y.M. Beltukov, N.V. Petrov, A.M. Samsonov, I.V. Semenova, Indirect assessment of bulk strain soliton velocity in opaque solids, \textit{Appl. Phys. Lett.} 112 (2018) 121903.
+%	\bibitem{Strain2010} G.V. Dreiden, K.R. Khusnutdinova, A.M. Samsonov, I.V. Semenova, Longitudinal strain solitary wave in a two-layered polymeric bar, \textit{Strain} 46 (2010) 589-598.
+%	\bibitem{SPIE2018} A.V. Belashov, Y.M. Beltukov, I.V. Semenova, Pump-probe digital holography for monitoring of long bulk nonlinear strain waves in solid waveguides, \textit{Proc. SPIE} 10678 (2018) 1067810.
 \end{thebibliography}
 
 
